// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioBorderedBox renders correctly 1`] = `
<DocumentFragment>
  .cache-5jm5b {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
}

.cache-kmnzss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-1buknan {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-1buknan:hover .e1duuirp4,
.cache-1buknan:focus .e1duuirp4 {
  background-color: rgba(212,218,231,0.25);
  border-radius: 50%;
}

.cache-1buknan:hover .e1duuirp4>.e1duuirp5,
.cache-1buknan:focus .e1duuirp4>.e1duuirp5 {
  fill: #4f0599;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-14h2zyo {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-14h2zyo.cache-14h2zyo {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1bj69hq {
  font-size: 12px;
  color: #ef5774;
  padding: 0 4px;
}

<div
    class="cache-5jm5b e13z6rra1"
  >
    <div
      class="cache-kmnzss e13z6rra0"
    >
      <div
        class="cache-1dp0kf7"
      >
        <label
          class="e1duuirp3 e1g1zfwd0 cache-1buknan"
          for="radio-choice"
        >
          <div
            class="cache-tn3xtd e1duuirp4"
          >
            <svg
              class="e1duuirp5 etwatq50 cache-14h2zyo"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
          </div>
          <div
            class="cache-0 e1duuirp2"
          >
            Choice
          </div>
          <input
            aria-checked="false"
            class="cache-cujed6 e1duuirp1"
            id="radio-choice"
            name="radio"
            tabindex="0"
            type="radio"
            value="choice"
          />
        </label>
        <div
          class="e14o3tsk0 cache-xcx33n"
        >
          <div
            class="cache-1bj69hq e1duuirp0"
          />
        </div>
      </div>
      <span />
    </div>
    <div>
      Choice description
    </div>
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly and triggers change on borderedbox click 1`] = `
<DocumentFragment>
  .cache-5jm5b {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
}

.cache-kmnzss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-1buknan {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-1buknan:hover .e1duuirp4,
.cache-1buknan:focus .e1duuirp4 {
  background-color: rgba(212,218,231,0.25);
  border-radius: 50%;
}

.cache-1buknan:hover .e1duuirp4>.e1duuirp5,
.cache-1buknan:focus .e1duuirp4>.e1duuirp5 {
  fill: #4f0599;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-14h2zyo {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-14h2zyo.cache-14h2zyo {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1bj69hq {
  font-size: 12px;
  color: #ef5774;
  padding: 0 4px;
}

<div
    class="cache-5jm5b e13z6rra1"
  >
    <div
      class="cache-kmnzss e13z6rra0"
    >
      <div
        class="cache-1dp0kf7"
      >
        <label
          class="e1duuirp3 e1g1zfwd0 cache-1buknan"
          for="radioborderedbox-choice1"
        >
          <div
            class="cache-tn3xtd e1duuirp4"
          >
            <svg
              class="e1duuirp5 etwatq50 cache-14h2zyo"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
          </div>
          <div
            class="cache-0 e1duuirp2"
          >
            Choice 1
          </div>
          <input
            aria-checked="false"
            class="cache-cujed6 e1duuirp1"
            id="radioborderedbox-choice1"
            name="radioborderedbox"
            tabindex="0"
            type="radio"
            value="choice1"
          />
        </label>
        <div
          class="e14o3tsk0 cache-xcx33n"
        >
          <div
            class="cache-1bj69hq e1duuirp0"
          />
        </div>
      </div>
      <span />
    </div>
    <div>
      Choice 1 description
    </div>
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly when checked 1`] = `
<DocumentFragment>
  .cache-z9adck {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
  border: 1px solid #4f0599!important;
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-kmnzss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-1buknan {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-1buknan:hover .e1duuirp4,
.cache-1buknan:focus .e1duuirp4 {
  background-color: rgba(212,218,231,0.25);
  border-radius: 50%;
}

.cache-1buknan:hover .e1duuirp4>.e1duuirp5,
.cache-1buknan:focus .e1duuirp4>.e1duuirp5 {
  fill: #4f0599;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-d37612 {
  fill: #4f0599;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-d37612.cache-d37612 {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1bj69hq {
  font-size: 12px;
  color: #ef5774;
  padding: 0 4px;
}

<div
    class="cache-z9adck e13z6rra1"
  >
    <div
      class="cache-kmnzss e13z6rra0"
    >
      <div
        class="cache-1dp0kf7"
      >
        <label
          class="e1duuirp3 e1g1zfwd0 cache-1buknan"
          for="radio-choice"
        >
          <div
            class="cache-tn3xtd e1duuirp4"
          >
            <svg
              class="e1duuirp5 etwatq50 cache-d37612"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7Z"
              />
            </svg>
          </div>
          <div
            class="cache-0 e1duuirp2"
          >
            Choice
          </div>
          <input
            aria-checked="true"
            checked=""
            class="cache-cujed6 e1duuirp1"
            id="radio-choice"
            name="radio"
            tabindex="0"
            type="radio"
            value="choice"
          />
        </label>
        <div
          class="e14o3tsk0 cache-xcx33n"
        >
          <div
            class="cache-1bj69hq e1duuirp0"
          />
        </div>
      </div>
      <span />
    </div>
    <div>
      Choice description
    </div>
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-hug1xt {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
  cursor: not-allowed!important;
  color: #b2b6c3;
}

.cache-kmnzss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-1lp667k {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
  color: #b2b6c3;
  cursor: not-allowed;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-yvpov9 {
  fill: #f6f5f7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-yvpov9.cache-yvpov9 {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1bj69hq {
  font-size: 12px;
  color: #ef5774;
  padding: 0 4px;
}

<div
    class="cache-hug1xt e13z6rra1"
    disabled=""
  >
    <div
      class="cache-kmnzss e13z6rra0"
    >
      <div
        class="cache-1dp0kf7"
      >
        <label
          class="e1duuirp3 e1g1zfwd0 cache-1lp667k"
          disabled=""
          for="radio-choice"
        >
          <div
            class="cache-tn3xtd e1duuirp4"
          >
            <svg
              class="e1duuirp5 etwatq50 cache-yvpov9"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
          </div>
          <div
            class="cache-0 e1duuirp2"
          >
            Choice
          </div>
          <input
            aria-checked="false"
            aria-disabled="true"
            class="cache-cujed6 e1duuirp1"
            disabled=""
            id="radio-choice"
            name="radio"
            style="pointer-events: none;"
            type="radio"
            value="choice"
          />
        </label>
        <div
          class="e14o3tsk0 cache-xcx33n"
        >
          <div
            class="cache-1bj69hq e1duuirp0"
          />
        </div>
      </div>
      <span />
    </div>
    <div>
      Choice description
    </div>
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly with label desc and badge 1`] = `
<DocumentFragment>
  .cache-hug1xt {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
  cursor: not-allowed!important;
  color: #b2b6c3;
}

.cache-kmnzss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-1lp667k {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
  color: #b2b6c3;
  cursor: not-allowed;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-yvpov9 {
  fill: #f6f5f7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-yvpov9.cache-yvpov9 {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1bj69hq {
  font-size: 12px;
  color: #ef5774;
  padding: 0 4px;
}

.cache-9nurcj {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #ef5774;
  color: #fff;
  font-size: 12px;
  line-height: 24px;
  height: 24px;
}

<div
    class="cache-hug1xt e13z6rra1"
    disabled=""
  >
    <div
      class="cache-kmnzss e13z6rra0"
    >
      <div
        class="cache-1dp0kf7"
      >
        <label
          class="e1duuirp3 e1g1zfwd0 cache-1lp667k"
          disabled=""
          for="radio-choice"
        >
          <div
            class="cache-tn3xtd e1duuirp4"
          >
            <svg
              class="e1duuirp5 etwatq50 cache-yvpov9"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
          </div>
          <div
            class="cache-0 e1duuirp2"
          >
            Choice
          </div>
          <input
            aria-checked="false"
            aria-disabled="true"
            class="cache-cujed6 e1duuirp1"
            disabled=""
            id="radio-choice"
            name="radio"
            style="pointer-events: none;"
            type="radio"
            value="choice"
          />
        </label>
        <div
          class="e14o3tsk0 cache-xcx33n"
        >
          <div
            class="cache-1bj69hq e1duuirp0"
          />
        </div>
      </div>
      <span>
        (something)
      </span>
       
      <span
        aria-label="warning"
        class="egvl2gp0 cache-9nurcj"
        role="status"
      >
        Badge
      </span>
    </div>
    <div>
      Choice description
    </div>
  </div>
</DocumentFragment>
`;
